--- a/fingerPrint/templates/base.html
+++ b/fingerPrint/templates/base.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     
     <meta charset="utf-8">
@@ -12,9 +12,17 @@
 
     <title>{% block title %}Finger Print Attendence system{% endblock %}</title>
   </head>
-  <body>
-  	<nav class="navbar navbar-expand-lg navbar-light bg-light" mb-4>
-  <a class="navbar-brand" href="#">Navbar</a>
+  <body style = "font-family:Times New Roman;">
+ 
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" style="z-index: 50030; " role="navigation"   >
+  		<div class="container" >
+
+
+           <a class="navbar-brand" href="{% url 'home' %}">
+    <img src="https://mail.google.com/mail/u/0?ui=2&ik=199dec01ef&attid=0.1&permmsgid=msg-f:1640484156643837472&th=16c42ba618698620&view=att&disp=safe" width="120" height="120" class="d-inline-block align-top" alt="">
+</a>
+
+  <a class="navbar-brand" href="{% url 'home' %}">Finger Print Attendence system</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,43 +30,44 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
+      
+    
+    </ul>
+    {% if user.is_authenticated %}
+        <ul class="navbar-nav ">
+           <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+         {{user.username}}
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        	<a class="dropdown-item" href="{% url 'date' %}">Show Attendence </a>
+         
+          
+          
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+           <a class="dropdown-item" href="{% url 'password_change' %}">Change Passwored</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">Log Out </a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
     </ul>
+
+    {% else %}
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    	<a href="{% url 'signup' %}" class="btn btn-outline-primary ml-2">Sign up</a>
+    	<a href="{% url 'login' %}" class="btn btn-outline-secondary ml-2">Log in </a>
     </form>
+    {% endif %}
   </div>
 </nav>
+</div>
+</div>
   	<div class="container">
-  		<h1>Finger Print Attendence system </h1>
-  	<a href="{% url 'home' %}">Home</a>
-{% if user.is_authenticated %}
-<a href="{% url 'logout' %}">Log out </a>
-{% else %}
-<a href="{% url 'signup' %}">Sign up</a>
-<a href="{% url 'login' %}">Log in </a>
-{% endif %}
+  		
 <hr>
 {% block content %}
+
 {% endblock %} 
 
 </div>
