--- a/fingerPrint/templates/fingerPrint/date.html
+++ b/fingerPrint/templates/fingerPrint/date.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block content %} 
+{% load crispy_forms_tags %}
+{% block content %}
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -7,37 +8,83 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap DatePicker</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    <h2>welcome  black ,{{user.username}}!</h2>
-    <!------ the first date picker ---------->
-         <div class="container">
-            <h2>Date  picker</h2>
-            <div class="row">
-                <div class="col-md-12">
-                    <input id="datepicker" width="270" />
+    <h2>welcome back ,{{user.username}}! </h2>
+
+    <h3> - please specify your date range:</h3>
+    <div class="container">
+        <div class="row justify-content-center align-items-center ">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="container" style="z-index:1001; padding-top: 60px;">
+                            <h3> from:</h3>
+                            <div class="form-group col-md-2 col-lg-2">
+
+                                <input type="text" class="form-control" id="datepicker" name="startDate" />
+                            </div>
+                        </div>
+                        <div class="container">
+                            <h3> to :</h3>
+                            <div class="form-group col-md-2 col-lg-2">
+
+                                <input type="text" class="form-control" id="datepicker2" name="endDate" />
+                            </div>
+                        </div>
+                    </div>
+                    <script>
+                        $('#datepicker').datepicker({
+                            uiLibrary: 'bootstrap'
+                        });
+                        $('#datepicker2').datepicker({
+                            uiLibrary: 'bootstrap'
+                        });
+                    </script>
                 </div>
+
+                <br>
+                <br>
+                <form method="get">
+                    {{ filter.form.as_p }}
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">display Attendence </button>
+                </form>
             </div>
         </div>
+    </div>
 
-       <script>
-           
-        $('#datepicker').datepicker({
-            uiLibrary: 'bootstrap'
-        });
-        
+    <hr />
+    <div class="row mr-4 ">
+        <h3> .. Your attendence record: </h3>
+        <ol>
+            <br>
+            <br>
+            <h1>{{attendance.id}}</h1>
 
-       </script>
 
+            {% for att in attendance %}
+
+            <p>{{att.date|slice:"0:4" }} / {{att.date|slice:"4:6" }} / {{att.date|slice:"6:8" }}, {{att.checktime}}</p>
+            <hr>
+
+
+            {% endfor %}
+        </ol>
+    </div>
 </body>
+
+
 </html>
 
 {% endblock %}
