--- a/fingerPrint/templates/registration/login.html
+++ b/fingerPrint/templates/registration/login.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %} 
-<h2>log in to the system  </h2>
-<form method="POST">
-	{% csrf_token %}
-	{{form.as_p}}
-	 <button type="submit">log in </button>
-</form>
+ <div class="row justify-content-center">
+    <div class="col-6">
+      <div class="card">
+        <div class="card-body">
+          <h2>Log in</h2>
+          <form method="post" novalidate>
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Log in</button>
+            
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
